--- a/verifiers/verifiers_config.yaml
+++ b/verifiers/verifiers_config.yaml
@@ -87,8 +87,8 @@ verifiers-config:
               template: false
               data-tag: "components-access-control-data"
               value-tag: "threat-component"
-        issue-text-key: conditional-mandatory-exists
-        fix-text-key: conditional-mandatory-exists-fix
+        issue-text-key: conditional-mandatory-authnz
+        fix-text-key: conditional-mandatory-authnz-fix
         issue-location: if
         issue-table-tag: "components-access-control-data"       # When there's an error, use the table with this tag
         issue-table-row:                                        # When there's an error, leaving this blank means no (row) location is shown
@@ -170,6 +170,21 @@ verifiers-config:
               expected-result: {{ translate.na | safe }}
         issue-text-key: "conditional-authnz-na"
         fix-text-key: "conditional-authnz-na-fix"
+      # If 'Description' is not empty then 'URL' must also be not empty
+      - if:
+          value-tag: "url-description"
+          value-condition:
+            validator: "string"
+            config:
+              method: "isnotempty"
+        then:
+          value-tag: "url"
+          value-condition:
+            validator: "string"
+            config:
+              method: "isnotempty"
+        issue-text-key: "conditional-mandatory-url"
+        issue-location: if
   
   field-validation-uniqueness:                        # verifier to check if a value is unique, according the criteria in it's tag
     unique-tag-prefix: "unique"                       # how to identity tags containing uniqueness criteria
